Adding navigation bar

--- a/templates/mainpage.html
+++ b/templates/mainpage.html
@@ -3,8 +3,10 @@
 <title>MediaSphere--the social network that's good for things other than screwing around<title>
 </head>
 <body>
+
 <center>
-<img src="http://www.sloganizer.net/en/style3,MediaSphere.png" border="0" width=800 height=120>
+<img src="http://www.sloganizer.net/en/style3,MediaSphere.png" border="0" width=800 height=120 >
+
 </center>
 <br><i>I don't think we actually have a slogan yet so this is just a placeholder</i>
 <br><hr>
@@ -17,7 +19,8 @@ Welcome! MediaSphere is a brand-new social website that will launch September 20
 <br>
 <b>Mediasphere isn't quite ready for prime time yet</b>. But as we develop it this summer, we'll be moving more and more parts of the site into a public preview so that we can get feedback and see what people like and dislike.
 <br>Hope to see you in September!
-
+<br>
+<iframe src="/main_header" width=10000 height=50 scrolling=no>
 </body>
 </html>
 
